--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_svg: ^0.19.0
   intl: 0.15.7
+  sqflite: ^1.3.0
+  path_provider: ^1.6.24
 
 dev_dependencies:
   flutter_test:
