--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   intl: 0.15.7
   sqflite: ^1.3.0
   path_provider: ^1.6.24
+  flutter_colorpicker: ^0.3.4
 
 dev_dependencies:
   flutter_test:
